Set PowerShell Summary page on left tree

--- a/_data/sidebars/p_enterprise_sidebar.yml
+++ b/_data/sidebars/p_enterprise_sidebar.yml
@@ -712,6 +712,10 @@ entries:
         output: web
         subfolderitems:
 
+        - title: Windows Powershell / Command line access
+          url: /enterprise_commandline_summary.html
+          output: web, pdf
+
         - title: Spotlight Connections
           url: /enterprise_commandline_connections.html
           output: web, pdf
