[SoSSE-8670] Added two new DS alarms

--- a/_data/sidebars/c_spotlightds_sidebar.yml
+++ b/_data/sidebars/c_spotlightds_sidebar.yml
@@ -40,6 +40,14 @@ entries:
       url: /spotlightds_alarm_alarmevaluationfailure.html
       output: web, pdf
 
+    - title: Diagnostic Server - Spotlight Cloud Incompatibility
+      url: /spotlightds_alarm_cloudincompatibility.html
+      output: web, pdf
+
+    - title: Diagnostic Server - Spotlight Cloud Future Incompatibility
+      url: /spotlightds_alarm_cloudfutureincompatibility.html
+      output: web, pdf
+
     - title: Diagnostic Server - Collection Execution Failure
       url: /spotlightds_alarm_collectionexecutionfailure.html
       output: web, pdf
