SEMB-743 add get-workloadanalysis to online help

--- a/_data/sidebars/p_enterprise_sidebar.yml
+++ b/_data/sidebars/p_enterprise_sidebar.yml
@@ -728,6 +728,10 @@ entries:
           url: /enterprise_commandline_plannedoutage.html
           output: web, pdf
 
+        - title: Get Workload Analysis
+          url: /enterprise_commandline_getworkloadanalysis.html
+          output: web, pdf
+
   - title: Backend deployment
     output: web, pdf
     folderitems:
