--- a/_data/sidebars/p_enterprise_sidebar.yml
+++ b/_data/sidebars/p_enterprise_sidebar.yml
@@ -728,7 +728,7 @@ entries:
           url: /enterprise_commandline_plannedoutage.html
           output: web, pdf
 
-        - title: Get Workload Analysis
+        - title: Get Workload Analysis data
           url: /enterprise_commandline_getworkloadanalysis.html
           output: web, pdf
 
